--- a/web/css/sidebar.css
+++ b/web/css/sidebar.css
@@ -61,8 +61,8 @@
 }
 
 .sidebar-nav {
-    position: absolute;
-    top: 0;
+    /*position: absolute;*/
+    /*top: 0;*/
     width: 250px;
     margin: 0;
     padding: 0;
@@ -81,11 +81,12 @@
     border-left-width: 10px; 
 }
 
-.sidebar-nav li a {
+.sidebar-nav li:not(.sidebar-brand) a {
     display: block;
     text-decoration: none;
     color: #999999;
 }
+
 
 .sidebar-nav li a:hover {
     text-decoration: none;
@@ -104,7 +105,7 @@
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+    color: #23527c;
 }
 
 .sidebar-nav > .sidebar-brand:hover {
