--- a/web/css/main.css
+++ b/web/css/main.css
@@ -15,8 +15,8 @@ body{
 }
 
 img.edition{
-    width: 100px;
-    height: 80px;
+    width: 100%;
+    height: 100%;
 }
 
 .edition-item{
@@ -285,6 +285,7 @@ a:hover{
 */
 
 .jumbotron {
+    padding: 30px 0px;
     margin-bottom: 0px;
     /*min-height: 200px;*/
     width: 100%;
@@ -296,4 +297,24 @@ a:hover{
 .jumbotron h1 {
     color: #ffffff;
     background-color: rgba(52, 73, 94, 0.8);
+}
+
+
+/**
+    Message box
+*/
+
+#message-box {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    z-index: 1000;
+}
+
+#message-box div.alert {
+    -o-transition: color 0.3s ease-in-out;
+    -moz-transition: color 0.3s ease-in-out;
+    -webkit-transition: color 0.3s ease-in-out;
+    -ms-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
 }
