--- a/web/css/cssFormPaiement.css
+++ b/web/css/cssFormPaiement.css
@@ -34,7 +34,7 @@
    margin-top: 20%;
 }
 
-.boutonValider{
+.valider{
     
     position: relative;
     width: 10%;
@@ -47,7 +47,7 @@
     float : left;
 }
 
-.boutonAnnuler{
+.annuler{
     position: relative;
     width: 10%;
     min-width: 20px;
